--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-link-error": "^1.1.13",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
+    "cypress": "8.7.0",
     "graphql-tag": "^2.11.0",
     "lodash.debounce": "^4.0.8",
     "lodash.flatmap": "^4.5.0",
